--- a/.github/workflows/del.yml
+++ b/.github/workflows/del.yml
@@ -1,9 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Delete Draft Releases
 
 # Controls when the workflow will run
-on: workflow_dispatch:
+on: workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
